# r503-webusb

./: Cargo.toml  LICENSE-MIT  README.md  memory.x
prod/: 50-MimoFPS.rules  MimoFPS.desktop  MimoFPS.json  index.html
src/: main.rs
