[package]
name = "r503-webusb"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.0"
defmt = "0.3"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
    "task-arena-size-98304",
] }
embassy-futures = { version = "0.1.0" }
embassy-rp = { version = "0.4.0", features = [
    "binary-info",
    "critical-section-impl",
    "defmt",
    "rp235xa",
    "time-driver",
    "unstable-pac",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
heapless = "0.8"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

smart-leds = "0.3.0"
static_cell = "2.1"
r503 = { git = "https://github.com/Dygear/r503.git" }

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
