[package]
name = "r503-webusb"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "1.0"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
    "task-arena-size-98304",
] }
embassy-futures = { version = "0.1" }
embassy-rp = { version = "0.4", features = [
    "binary-info",
    "critical-section-impl",
    "defmt",
    "rp235xa",
    "time-driver",
    "unstable-pac",
] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.4" }
embedded-io-async = { version = "0.6", features = ["defmt-03"] }
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

smart-leds = "0.4"
static_cell = "2.1"
heapless = "0.8"

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
